# 6-Neural_Networks

./: CMakeLists.txt  main.cpp
DataHandle/: CMakeLists.txt  common.cpp  common.h  data.cpp  data.h  dataHandler.cpp  dataHandler.h  inputdata.h
kMeans/: CMakeLists.txt  kmeans.cpp  kmeans.h
knn/: CMakeLists.txt  knn.cpp  knn.h
neuralNetwork/: CMakeLists.txt  layer.cpp  layer.h  network.cpp  network.h  neuron.cpp  neuron.h
